# vexipy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  publish-docs.yaml  publish.yaml  scorecard.yml  test-publish.yaml  validate.yaml
py_vex/: __init__.py  _iri.py  component.py  document.py  statement.py  vulnerability.py
tests/: conftest.py  test_component.py  test_document.py  test_iri.py  test_statement.py  test_vulnerability.py
vexipy/: __init__.py  component.py  document.py  statement.py
