[project]
name = "py-vex"
version = "0.1.0"
description = "Python OpenVEX Library"
readme = "README.md"
authors = [
    { name = "Colin Pinnell McAllister", email = "colinmca242@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.1",
    "rfc3987>=1.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.130.5",
    "hypothesis-jsonschema>=0.23.1",
    "jsonschema>=4.23.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
