[project]
name = "vexipy"
description = "Python OpenVEX Library"
readme = "README.md"
authors = [
    { name = "Colin Pinnell McAllister", email = "colinmca242@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "rfc3987>=1.3.8",
]
dynamic = [
    "version",
]
keywords = ["vex", "openvex", "security", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = [
    "setuptools>=80.9.0", 
    "setuptools-scm[simple]>=9.2.2",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.148.3",
    "hypothesis-jsonschema>=0.23.1",
    "isort>=7.0.0",
    "jsonschema>=4.25.1",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "setuptools>=80.9.0", 
    "setuptools-scm[simple]>=9.2.2",
]
doc = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.isort]
known_local_folder="conftest"
profile = "black"
multi_line_output = 3
line_length = 88
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ["_version.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools.packages.find]
exclude = [
    "docs",
    "files",
    "tests",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "vexipy/_version.py"
